syntax = "proto3";

package io.leishi.genshin.proto;

enum Character {
    CHARACTER_UNSPECIFIED = 0;
    TRAVELER_ANEMO = 1;
    TRAVELER_GEO = 2;
    TRAVELER_ELECTRO = 3;
    TRAVELER_DENDRO = 4;
    AETHER = 5;
    LUMINE = 6;
    ALBEDO = 7;
    ALOY = 8;
    AMBER = 9;
    BARBARA = 10;
    BEIDOU = 11;
    BENNETT = 12;
    CHONGYUN = 13;
    DILUC = 14;
    DIONA = 15;
    EULA = 16;
    FISCHL = 17;
    GANYU = 18;
    HU_TAO = 19;
    JEAN = 20;
    KAEDEHARA_KAZUHA = 21;
    KAEYA = 22;
    KAMISATO_AYAKA = 23;
    KEQING = 24;
    KLEE = 25;
    KUJOU_SARA = 26;
    LISA = 27;
    MONA = 28;
    NINGGUANG = 29;
    NOELLE = 30;
    QIQI = 31;
    RAIDEN_SHOGUN = 32;
    RAZOR = 33;
    ROSARIA = 34;
    SANGONOMIYA_KOKOMI = 35;
    SAYU = 36;
    SUCROSE = 37;
    TARTAGLIA = 38;
    THOMA = 39;
    VENTI = 40;
    XIANGLING = 41;
    XIAO = 42;
    XINGQIU = 43;
    XINYAN = 44;
    YANFEI = 45;
    YOIMIYA = 46;
    ZHONGLI = 47;
    GOROU = 48;
    ARATAKI_ITTO = 49;
    SHENHE = 50;
    YUN_JIN = 51;
    YAE_MIKO = 52;
    KAMISATO_AYATO = 53;
    YELAN = 54;
    KUKI_SHINOBU = 55;
    SHIKANOIN_HEIZOU = 56;
    COLLEI = 57;
    DORI = 58;
    TIGHNARI = 59;
    CANDACE = 60;
    CYNO = 61;
    NILOU = 62;
    NAHIDA = 63;
    LAYLA = 64;
    FARUZAN = 65;
    WANDERER = 66;
    ALHAITHAM = 67;
    YAOYAO = 68;
    DEHYA = 69;
    MIKA = 70;
    BAIZHU = 71;
    KAVEH = 72;
    KIRARA = 73;
    TRAVELER_HYDRO = 74;
    LYNEY = 75;
    LYNETTE = 76;
    FREMINET = 77;
    NEUVILLETTE = 78;
    WRIOTHESLEY = 79;
    FURINA = 80;
    CHARLOTTE = 81;
    NAVIA = 82;
    CHEVREUSE = 83;
    XIANYUN = 84;
    GAMING = 85;
    CHIORI = 86;
    SIGEWINNE = 87;
    ARLECCHINO = 88;
    SETHOS = 89;
    CLORINDE = 90;
    EMILIE = 91;
}
